--- a/Sweden.html
+++ b/Sweden.html
@@ -21,9 +21,9 @@
         <a href="Finland.html">Finland</a>
       </nav>
       <section class="Innehåll">
-        <h1>Welcome to my website</h1>
-        <p>This website contains information about five European countries.</p>
-        <p class="Earth">🌍</p>
+        <h1>Sweden</h1>
+        <p>Sweden has a population around 10 million people</p>
+        <img class="Svergie-flagga" src="Flaggor/Svergieflagga.webp" alt="" />
       </section>
     </div>
     <div class="Footer">Made by Joel</div>
