--- a/England.html
+++ b/England.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countrie website</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -21,9 +21,13 @@
         <a href="Finland.html">Finland</a>
       </nav>
       <section class="Innehåll">
-        <h1>Welcome to my website</h1>
-        <p>This website contains information about five European countries.</p>
-        <p class="Earth">🌍</p>
+        <h1>England</h1>
+        <p>England has a population of 60 million people</p>
+        <img
+          class="England-flag"
+          src="Flaggor/England.png"
+          alt="England-flag"
+        />
       </section>
     </div>
     <div class="Footer">Made by Joel</div>
